<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/bg6" >

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="23dp"
        android:background="#006600"
        android:onClick="showMap"
        android:text="@string/map_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="34dp"
        android:background="#006600"
        android:onClick="showPhoto"
        android:text="@string/photo_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="54dp"
        android:background="#006600"
        android:onClick="showConverter"
        android:text="@string/converter_button"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_below="@+id/button2"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="74dp"
        android:background="#006600"
        android:onClick="showShoppingList"
        android:text="@string/my_shopping_list_title"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

</RelativeLayout>
